Fixed about me spacing on various devices

--- a/css/constants.css
+++ b/css/constants.css
@@ -10,11 +10,9 @@
     --dark-grey: #191919;
     --transparent-grey: #ffffff1a;
     --black: #000;
-    --breakpoint-xs: 0;
-    --breakpoint-sm: 576px;
-    --breakpoint-md: 768px;
-    --breakpoint-lg: 992px;
-    --breakpoint-xl: 1200px;
+    --phone-max-width: 767px;
+    --tablet-min-width: 768px;
+    --computer-min-width: 1200px;
     --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
