--- a/css/section/about_me.css
+++ b/css/section/about_me.css
@@ -18,4 +18,34 @@
     background-color: var(--transparent-grey);
     border-radius: 10px;
     padding: 20px;
-  }
+}
+
+
+/* Phone (max-width: 767px) */
+@media (max-width: 767px) {
+    .about-me-box {
+        height: 100%;
+        padding: 15px;
+        font-size: 1rem;
+    }
+
+    .about-me-box h2 {
+        font-size: 3rem;
+    }
+}
+
+/* Tablet (min-width: 768px and max-width: 991px) */
+@media (min-width: 768px) and (max-width: 991px) {
+    .about-me-box {
+        height: 400px;
+        padding: 15px;
+        font-size: 0.84rem;
+    }
+
+    .about-me-box h2 {
+        font-size: 2rem;
+    }
+}
+
+/* Desktop (min-width: 992px) */
+@media (min-width: 992px) {}
