--- a/css/section/footer.css
+++ b/css/section/footer.css
@@ -1,1 +1,11 @@
 @import url('../constants.css');
+
+
+/* Phone (max-width: 767px) */
+@media (max-width: 767px) {}
+
+/* Tablet (min-width: 768px and max-width: 991px) */
+@media (min-width: 768px) and (max-width: 991px) {}
+
+/* Desktop (min-width: 992px) */
+@media (min-width: 992px) {}
