--- a/css/section/home.css
+++ b/css/section/home.css
@@ -5,6 +5,15 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    height: 600px;
+    height: 767px;
     margin-left: 540px;
 }
+
+/* Phone (max-width: 767px) */
+@media (max-width: 767px) {}
+
+/* Tablet (min-width: 768px and max-width: 991px) */
+@media (min-width: 768px) and (max-width: 991px) {}
+
+/* Desktop (min-width: 992px) */
+@media (min-width: 992px) {}
